# gmail-player-support-agent

./: .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml
config/: config.example.toml
docs/: CODEX_PROJECT_BRIEF.md  OPTIMIZATION_BACKLOG.md  PROJECT_PLAN.md  REPLY_PRECISION_OPTIMIZATION_PLAN.md
docs/superpowers/plans/: 2026-07-01-gmail-auto-worker-stability.md
eval_fixtures/: dummy.json
knowledge/: coin_frenzy_investigation.toml  generic_support_rules.toml  legacy_reply_templates.toml  numbercrush_support_rules.toml  remove_ads_investigation.toml
scripts/: import_legacy_reply_templates.py  start-web-ui.sh  web-ui.config.local.sh.example
src/player_support_agent/: __init__.py  agent_runner.py  auto_task_builder.py  auto_worker.py  automation_session_summary.py  candidate_discovery_filter.py  chat_server.py  deepseek_client.py  dry_run.py  eval_runner.py  gmail_stats.py  local_model_service.py  main.py  manual_trigger.py  paths.py  processed_message_store.py  prompts.py  readiness_check.py  run_result_summary.py  run_trace.py  terminal_chat.py  workflows.py
src/player_support_agent/tools/: README.md  __init__.py  clickhouse_tools.py  config.py  decision_tools.py  (+7 more)
tests/unit/: test_automation_session_summary.py  test_candidate_discovery_filter.py  test_player_support_clickhouse.py  test_player_support_config.py  test_player_support_decisions.py  test_player_support_deepseek_client.py  test_player_support_dry_run.py  test_player_support_entrypoints.py  test_player_support_gmail.py  test_run_result_summary.py  test_run_selection.py  test_support_rules.py
(+251 files in other folders)
