[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "player-support-agent"
version = "0.1.0"
description = "Multi-project Gmail player support agent built on Forge."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "forge-guardrails>=0.7.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
player-support-preflight = "player_support_agent.main:main"
player-support-worker = "player_support_agent.auto_worker:main"
player-support-manual = "player_support_agent.manual_trigger:main"
player-support-chat = "player_support_agent.terminal_chat:main"
player-support-web = "player_support_agent.chat_server:main"
player-support-readiness = "player_support_agent.readiness_check:main"

[tool.hatch.build.targets.wheel]
packages = ["src/player_support_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"